--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Site simples</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Site simples</title>
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <body>
+        <h1>Lista de Tarefas</h1>
+        <p id="msg" >Current tasks:</p>   
+        <ul>
+            <li><class-"list" >Add visual styles</li>
+            <li><class-"list" >Add light and dark themes</li>
+            <li> Enable switching the theme</li>
+        </ul>
     
-</body>
+    </body>
 </html>
