--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <h1>Lista de Tarefas</h1>
-        <p id="msg" >Current tasks:</p>   
+        <p id="msg" >Tarefas atuais:</p>   
         <ul>
-            <li><class-"list" >Add visual styles</li>
-            <li><class-"list" >Add light and dark themes</li>
-            <li> Enable switching the theme</li>
+            <li><class="list">Adicionar estilos visuais</li>
+            <li><class="list">Adicionar temas claro e escuro</li>
+            <li>Habilitar a alternância de temas</li>
         </ul>
     
     </body>
