--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Site simples</title>
         <link rel="stylesheet" href="main.css">
     </head>
-    <body>
+    <body class="light-theme">
         <h1>Lista de Tarefas</h1>
         <p id="msg" >Tarefas atuais:</p>   
         <ul>
@@ -13,6 +13,5 @@
             <li><class="list">Adicionar temas claro e escuro</li>
             <li>Habilitar a alternância de temas</li>
         </ul>
-    
     </body>
 </html>
