adicionei o botão de tema em javascript

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
             <li><class="list">Adicionar temas claro e escuro</li>
             <li>Habilitar a alternância de temas</li>
         </ul>
+        <script src=""app.js"></script>
+        <noscript>Você precisa habilitar Javascript para exibir a página completa</noscript>
     </body>
 </html>
